--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
+<a href=""></a>
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
 
